Fixed menu visibility

--- a/desktop/src/renderer/Elements/List/item.scss
+++ b/desktop/src/renderer/Elements/List/item.scss
@@ -6,7 +6,7 @@
   position: relative;
   user-select: none;
 
-  padding: 10px 19px 30px;
+  padding: 10px 2.5% 30px;
 
   &_select {
     background-color: var(--trans-light);
